Fix BLE scan and connection flow

--- a/mobile_app/app.json
+++ b/mobile_app/app.json
@@ -53,10 +53,8 @@
         }
       ],
       [
-        "react-native-ble-plx",
+        "react-native-ble-manager",
         {
-          "isBackgroundEnabled": false,
-          "modes": [],
           "bluetoothAlwaysPermission": "This app needs Bluetooth to connect to your Morse key device."
         }
       ]
