--- a/mobile_app/app.json
+++ b/mobile_app/app.json
@@ -14,21 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.morseforge.keylink",
-      "infoPlist": {
-        "NSBluetoothAlwaysUsageDescription": "This app needs Bluetooth to connect to your Morse key device.",
-        "NSBluetoothPeripheralUsageDescription": "This app needs Bluetooth to connect to your Morse key device."
-      }
+      "bundleIdentifier": "com.morseforge.keylink"
     },
     "android": {
       "package": "com.morseforge.keylink",
-      "permissions": [
-        "android.permission.BLUETOOTH",
-        "android.permission.BLUETOOTH_ADMIN",
-        "android.permission.BLUETOOTH_CONNECT",
-        "android.permission.BLUETOOTH_SCAN",
-        "android.permission.ACCESS_FINE_LOCATION"
-      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#0f1115"
@@ -52,12 +41,6 @@
           }
         }
       ],
-      [
-        "react-native-ble-manager",
-        {
-          "bluetoothAlwaysPermission": "This app needs Bluetooth to connect to your Morse key device."
-        }
-      ]
     ]
   }
 }
